--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+
 spring.datasource.url = jdbc:mysql://localhost:3306/academy
 spring.datasource.username = root
 spring.datasource.password = 1029384756
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+
+logging.level.org.springframework.web = ERROR
+logging.level.academy = DEBUG
+logging.pattern.console = %d{yyyy-MM-dd HH:mm:ss} [%thread] %5level %logger{36} - %msg%n
+
+logging.file.name = application.log
+logging.pattern.file = %d{yyyy-MM-dd HH:mm:ss} [%thread] %5level %logger{36} - %msg%n
+
+server.port=8080
